--- a/html/index.html
+++ b/html/index.html
@@ -424,6 +424,8 @@
       </div>
     </footer>
 
+    <script defer src="https://vercel.com/analytics/script.js"></script>
+
     <!-- core  -->
     <script src="assets/vendors/jquery/jquery-3.4.1.js"></script>
     <script src="assets/vendors/bootstrap/bootstrap.bundle.js"></script>
