--- a/html/index.html
+++ b/html/index.html
@@ -20,7 +20,8 @@
 
     <link rel="stylesheet" href="assets/css/samet.css" />
     
-    <script defer src="https://vercel.com/analytics/script.js"></script>
+   
+    <script defer src="/_vercel/insights/script.js"></script>
   </head>
   <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
     <a
