--- a/html/index.html
+++ b/html/index.html
@@ -10,6 +10,8 @@
       name="description"
       content="Start your development with samet landing page."
     />
+    <meta name="keywords" content="Samet horanoğlu, samet horanoğlu, Web Designer | Developer, samet, portfolyö benim sayfam" >
+    <meta name="description" content="blog sitesi, blog, samet horanoğlu, wep designer">
     <meta name="author" content="Devcrud" />
     <title>Samet Horanoğlu</title>
     <!-- font icons -->
@@ -42,7 +44,7 @@
             ></a>
           </li>
           <li class="social-item">
-            <a class="social-link text-light" href="https://x.com/home?lang=tr"
+            <a class="social-link text-light" href="https://x.com/SametHoranoglu"
               ><i class="ti-twitter" aria-hidden="true"></i
             ></a>
           </li>
@@ -54,7 +56,7 @@
             ></a>
           </li>
           <li class="social-item">
-            <a class="social-link text-light" href="#"
+            <a class="social-link text-light" href="https://www.instagram.com/samedim_hrnoglu/"
               ><i class="ti-instagram" aria-hidden="true"></i
             ></a>
           </li>
@@ -107,7 +109,7 @@
         >
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a href="#home" class="nav-link">Home</a>
+              <a href="#home" class="nav-link">Ana Sayfa</a>
             </li>
             <li class="nav-item">
               <a href="#about" class="nav-link">Hakkımda</a>
@@ -122,11 +124,11 @@
           </ul>
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a href="#portfolio" class="nav-link">Portfolio</a>
+              <a href="#meeting" class="nav-link">Görüşme</a>
             </li>
 
             <li class="nav-item last-item">
-              <a href="#contact" class="nav-link">Contact</a>
+              <a href="#contact" class="nav-link">İçerik</a>
             </li>
           </ul>
         </div>
@@ -153,9 +155,7 @@
           <h3 class="font-weight-light">Kişisel Bilgilerim</h3>
           <span class="line mb-5"></span>
           <ul class="mt40 info list-unstyled">
-            <li><span>Birthdate</span> : 01/01/2000</li>
             <li><span>Email</span> : samethoranoglu@gmail.com</li>
-            <li><span>Phone</span> : 05387796400</li>
             <li><span>Address</span> : Şanlıurfa / Siverek</li>
           </ul>
           <ul class="social-icons pt-3">
@@ -167,7 +167,7 @@
               ></a>
             </li>
             <li class="social-item">
-              <a class="social-link" href="https://x.com/home?lang=tr"
+              <a class="social-link" href="https://x.com/SametHoranoglu"
                 ><i class="ti-twitter" aria-hidden="true"></i
               ></a>
             </li>
@@ -179,7 +179,7 @@
               ></a>
             </li>
             <li class="social-item">
-              <a class="social-link" href="#"
+              <a class="social-link" href="https://www.instagram.com/samedim_hrnoglu/"
                 ><i class="ti-instagram" aria-hidden="true"></i
               ></a>
             </li>
@@ -231,7 +231,7 @@
       </div>
     </div>
 
-    <section class="section bg-dark py-5">
+    <section class="section bg-dark py-5" id="meeting">
       <div class="container text-center">
         <h2 class="text-light mb-5 font-weight-normal">
           Serbest Çalışmaya Uygunum
@@ -339,17 +339,6 @@
               <h4 class="contact-title">İletişime geçin</h4>
               <div class="row mb-2">
                 <div class="col-1 pt-1 mr-1">
-                  <i class="ti-mobile icon-md"></i>
-                </div>
-                <div class="col-10">
-                  <h6 class="d-inline">
-                    telefon : <br />
-                    <span class="text-muted">05387796400</span>
-                  </h6>
-                </div>
-              </div>
-              <div class="row mb-2">
-                <div class="col-1 pt-1 mr-1">
                   <i class="ti-map-alt icon-md"></i>
                 </div>
                 <div class="col-10">
@@ -381,7 +370,7 @@
                 <li class="social-item">
                   <a
                     class="social-link text-dark"
-                    href="https://x.com/home?lang=tr"
+                    href="https://x.com/SametHoranoglu"
                     ><i class="ti-twitter" aria-hidden="true"></i
                   ></a>
                 </li>
@@ -393,7 +382,7 @@
                   ></a>
                 </li>
                 <li class="social-item">
-                  <a class="social-link text-dark" href="#"
+                  <a class="social-link text-dark" href="https://www.instagram.com/samedim_hrnoglu/"
                     ><i class="ti-instagram" aria-hidden="true"></i
                   ></a>
                 </li>
